; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/ipv4/extr_fib_hash.c_fn_hash.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/ipv4/extr_fib_hash.c_fn_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fn_zone = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.fn_zone*)* @fn_hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fn_hash(i32 %0, %struct.fn_zone* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.fn_zone*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.fn_zone* %1, %struct.fn_zone** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @ntohl(i32 %6)
  %8 = load %struct.fn_zone*, %struct.fn_zone** %4, align 8
  %9 = getelementptr inbounds %struct.fn_zone, %struct.fn_zone* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = sub nsw i32 32, %10
  %12 = ashr i32 %7, %11
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = ashr i32 %13, 20
  %15 = load i32, i32* %5, align 4
  %16 = xor i32 %15, %14
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* %5, align 4
  %18 = ashr i32 %17, 10
  %19 = load i32, i32* %5, align 4
  %20 = xor i32 %19, %18
  store i32 %20, i32* %5, align 4
  %21 = load i32, i32* %5, align 4
  %22 = ashr i32 %21, 5
  %23 = load i32, i32* %5, align 4
  %24 = xor i32 %23, %22
  store i32 %24, i32* %5, align 4
  %25 = load %struct.fn_zone*, %struct.fn_zone** %4, align 8
  %26 = call i32 @FZ_HASHMASK(%struct.fn_zone* %25)
  %27 = load i32, i32* %5, align 4
  %28 = and i32 %27, %26
  store i32 %28, i32* %5, align 4
  %29 = load i32, i32* %5, align 4
  ret i32 %29
}

declare dso_local i32 @ntohl(i32) #1

declare dso_local i32 @FZ_HASHMASK(%struct.fn_zone*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
